--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -179,7 +179,9 @@ en:
       task_comment: "%{user} (%{role} at %{team}) added a note to a Task"
       project_media_comment: "%{user} (%{role} at %{team}) added a note to a %{parent_type}"
       project_media_create: "%{user} (%{role} at %{team}) added a %{type}"
+      project_media_create_related: "%{user} (%{role} at %{team}) added a related %{type}"
       project_media_create_no_user: "A %{type} has been added"
+      project_media_create_related_no_user: "A related %{type} has been added"
       project_media_update: "%{user} (%{role} at %{team}) edited a %{type}"
       project_media_update_no_user: "A %{type} has been edited"
       project_media_status: "%{user} (%{role} at %{team}) changed the %{workflow} status of a %{type}"
