--- a/config/locales/ar.yml
+++ b/config/locales/ar.yml
@@ -1,5 +1,19 @@
 ar:
   statuses:
+    ids:
+      verification_status: التحقق
+      translation_status: الترجمة
+      task_status: المهمة
+    task:
+      unresolved:
+        label: لم يتم انجازها
+        description: 'افتراضية : لم يتم انجازها بعد'
+      resolved:
+        label: تم إنجازها
+        description: تم إنجاز المهمة
+      cant_be_resolved:
+        label: لا يمكن انجازها
+        description: لم يكن من الممكن حل هذه المهمة
     media:
       undetermined:
         label: لم يبدأ بعد
@@ -70,6 +84,15 @@ ar:
       claim: إدعاء
       uploaded_image: صورة
       uploaded_file: ملف
+      task: المهمة
+      comment: ملحوظة
+      project_media: العنصر
+      media: عنصر
+      project: مشروع
+      team: فريق
+      user: مستخدم
+      source: مصدر
+      project_source: المصدر
     attributes:
       tag:
         data: الوسم
@@ -83,6 +106,8 @@ ar:
         name: الاسم
       contact:
         phone: رقم الهاتف
+      comment:
+        text: ملحوظة
       user:
         reset_password_token: رمز إعادة تعيين كلمة المرور
         email: البريد الإلكتروني
@@ -108,6 +133,7 @@ ar:
           other: قصير جداً (الحد الأدنى %{count} حروف)
   slack_webhook_format_wrong: صيغة Slack webhook غير صحيحة - الصيغة المطلوبة هي `https://hooks.slack.com/services/XXXXX/XXXXXXXXXX`
   slug_is_reserved: مأخوذ
+  invalid_format_for_languages: "صيغة اللغات غير صحيحة - الصيغة المطلوبة هي [{'id': 'en','title': 'English'}]"
   invalid_media_item: ' عذراً ، هذا العنصر غير صحيح'
   invalid_default_status_for_custom_verification_status: المُعَرِّف لحالة التحقق الإفتراضية غير صحيح
   invalid_active_status_for_custom_verification_status: المُعَرِّف لحالة التحقق النشطة غير صحيح
@@ -125,13 +151,54 @@ ar:
   rejected: لم يتم الموافقة
   mail_request_to_join_processed: '%{status} على طلب انضمامك إلى فريق %{team} على %{app_name}'
   mail_new_account: حساب جديد لك على %{app_name}
+  slack:
+    fields:
+      assigned: "مُكَلَّف إلى"
+      unassigned: "تم إلغاء التكليف من"
+      required: "إجبارية ؟"
+      required_yes: "نعم"
+      project: "المشروع"
+      source: "المصدر"
+      status: "الحالة"
+      status_previous: "الحالة السابقة"
+      related_to: "ذو صلة مع"
+      view_button: "عرض %{type} في %{app}"
+      project_source: "المصدر"
+      project_media: "العنصر"
+      attribution: "أنجزها"
+    messages:
+      task_create: "قام %{user} (%{role} في %{team}) بإنشاء مهمة"
+      task_edit: "قام %{user} (%{role} في %{team}) بتحرير مهمة"
+      task_assign: "قام %{user} (%{role} في %{team}) بتكليف %{type}"
+      task_unassign: "قام %{user} (%{role} في %{team}) بالغاء تكليف %{type}"
+      task_answer_create: "قام %{user} (%{role} في %{team}) بإجابة مهمة"
+      task_answer_edit: "قام %{user} (%{role} في %{team}) بتحرير اجابة مهمة"
+      task_comment: "قام %{user} (%{role} في %{team}) بإضافة ملحوظة الى مهمة"
+      project_media_comment: "قام %{user} (%{role} في %{team}) بإضافة ملحوظة الى %{parent_type}"
+      project_media_create: "قام %{user} (%{role} في %{team}) بإنشاء %{type}"
+      project_media_create_related: "قام %{user} (%{role} في %{team}) بإنشاء %{type} ذو صلة"
+      project_media_create_no_user: "تم انشاء %{type}"
+      project_media_create_related_no_user: "تم انشاء %{type} ذو صلة"
+      project_media_update: "قام %{user} (%{role} في %{team}) بتحرير %{type}"
+      project_media_update_no_user: "تم تحرير %{type}"
+      project_media_status: "قام %{user} (%{role} في %{team}) بتغيير حالة %{workflow} %{type}"
+      project_media_assign: "قام %{user} (%{role} في %{team}) بتكليف %{type}"
+      project_media_unassign: "قام %{user} (%{role} في %{team}) بالغاء تكليف %{type}"
+      project_source_comment: "قام %{user} (%{role} في %{team}) بإضافة ملحوظة الى %{parent_type}"
+      project_source_create: "قام %{user} (%{role} في %{team}) بإنشاء %{type}"
+      project_source_update: "قام %{user} (%{role} في %{team}) بتحرير %{type}"
+      project_create: "قام %{user} (%{role} في %{team}) بإنشاء مشروع"
+      user_member: "إنضم %{user} الى الفريق %{team}"
+      user_requested: "طلب %{user} الانضمام الى الفريق %{team}"
+      user_invited: "تمت دعوة %{user} الى الفريق %{team}"
+      user_banned: "تم نبذ %{user} من الفريق %{team}"
   mail_view_welcome: مرحباً بك في %{app_name}
   mail_view_register: "أنت على وشك الانتهاء من تسجيل حسابك على %{app_name}! من فضلك أكد عنوان بريدك الإلكتروني بالضغط على الرابط التالي:"
   mail_view_joined: تم الموافقة على طلب انضمامك إلى فريق %{team}! يمكنك الآن الذهاب إلى %{url} وبدء المشاركة!
   mail_view_rejected_to_join: عذراً ، لم تتم الموافقة على طلبك للإنضمام إلى فريق %{team}
   mail_view_request_to_join: "لقد طلب %{user} (%{handle}) الانضمام لفريق %{team} على %{app_name}"
   mail_view_process_request: "لمعالجة هذا الطلب برجاء تسحيل الدخول وزيارة: "
-  pender_could_not_parse: عذراً ، لم نتمكن من تحليل الميديا
+  pender_could_not_parse: عذراً ، لقد واجهنا خطأ ما اثناء تحليل الميديا. من فضلك أعد المحاولة وتواصل مع فريق الدعم إن استمر الخطأ.
   mail_duplicate_email_exists: كيفية تسجيل الدخول على %{app_name} الخاصة بك
   mail_duplicate_email_exists_body: "<p>مرحباً! نود أن نساعدك لتسجيل الدخول على %{app_name}.</p> <p>\nما الذي حدث؟ لقد حاولت تسجيل حساب جديد على %{app_name} باستخدام بريد إلكتروني مسجل بالفعل.</p> <p>\nحاول تسجيل الدخول باستخدام البريد الإلكتروني وكلمة المرور بدلاً من إنشاء حساب جديد.</p> <p>\nبذلك ستدخل إلى %{app_name} باستخدام نفس الحساب المسجل سابقاً. للمزيد من المساعدة ارسل لنا على البريد الإلكتروني %{support_email}.</p> <p>\n— فريق عمل %{app_name}</p>"
   mail_duplicate_email_exists_body_both_emails: "<p>مرحباً! نود أن نساعدك لتسجيل الدخول على %{app_name}.</p> <p>\nما الذي حدث؟ لقد حاولت تسجيل حساب جديد على %{app_name} باستخدام بريد إلكتروني مسجل بالفعل.</p> <p>\nحاول تسجيل الدخول باستخدام البريد الإلكتروني وكلمة المرور بدلاً من إنشاء حساب جديد.</p> <p>\nبذلك ستدخل إلى %{app_name} باستخدام نفس الحساب المسجل سابقاً. للمزيد من المساعدة ارسل لنا على البريد الإلكتروني %{support_email}.</p> <p>\n— فريق عمل %{app_name}</p>"
@@ -159,6 +226,9 @@ ar:
           html: "بمجرد أن تصبح جاهزة ، سوف تكون نسخة الفريق متاحة في <strong>%{copy_url}</strong>"
   reset_password_instructions: "تعليمات إعادة ضبط كلمة المرور لدى %{app_name}"
   email_not_found: هذا البريد الإلكتروني غير موجود
+  slack_channel_format_wrong: "قناة Slack غير صحيحة"
+  translation_status_not_valid: "حالة غير صحيحة"
+  translation_status_permission_error: "عذراً ، ليس مسموح لك تغيير هذه الحالة."
   translation_request_id_exists: "هناك طلب آخر لترجمة هذه الرسالة"
   auto_publisher_added_to_project: من الآن سوف يتم نشر كل ترجمة في %{project} إلى الحساب الذي أخترته على %{provider}. إن غيرت رأيك من فضلك تواصل مع فريق الدعم أو أحذف تطبيق Bridge من الحساب على %{provider}.
   invalid_token: رمز الأمان غير صحيح
@@ -177,6 +247,7 @@ ar:
   role_owner: مدير
   role_contributor: مشارك
   role_journalist: صحفي
+  role_annotator: مُفَسِّر
   role_none: عضو
   oembed_credit: تمت الإضافة من %{user} (%{role}) في %{date}
   oembed_notes_count:
@@ -193,10 +264,18 @@ ar:
     few: "%{count} مهام مكتملة"
     many: "%{count} مهمة مكتملة"
     other: "%{count} مهام مكتملة"
+  oembed_verification_tasks: المهام
   oembed_tasks: المهام
   oembed_translations: الترجمات
   oembed_expand_all: توسيع الكل
   oembed_collapse_all: طيّ الكل
+  oembed_resolved_tasks_count:
+    zero: "لا توجد مهام مكتملة"
+    one: "مهمة واحدة مكتملة"
+    two: "مهمتان مكتملتان"
+    few: "%{count} مهام مكتملة"
+    many: "%{count} مهمة مكتملة"
+    other: "%{count} مهمة مكتملة"
   oembed_notes: ملحوظات
   pender_conflict: هذا الرابط قيد المعالجة بالفعل. من فضلك حاول مجدداً بعد بضع ثوانٍ.
   duplicate_source: المصدر موجود بالفعل
@@ -212,11 +291,13 @@ ar:
   max_number_of_projects_reached: "عذراً ، لقد تم الوصول إلى الحد الأقصى للمشاريع في هذا الفريق"
   cant_set_custom_statuses: "عذراً ، خاصية حالات التحقق المتخصصة غير متاحة لهذا الفريق"
   cant_change_custom_statuses: "لا يمكن تعديل تعريفات الحالة لأن بعض الحالات قد تصير مفقودة. مُعرّفات الحالة اﻵتية : %{statuses} قيد الاستخدام للعناصر التالية :\n %{others_amount} %{urls}"
+  cant_create_team_task: "عذراً ، هذه الخاصية غير متاحة لهذا الفريق"
   cant_create_media_under_this_team_using_extension: "عذراً ، خاصية ملحق المتصفح غير متاحة لهذا الفريق"
   error_invalid_attribution: "إسناد غير صحيح"
   account_exists: هذا الحساب موجود بالفعل
   media_exists: هذا الميديا موجود بالفعل
   source_exists: هذا المصدر موجود بالفعل
+  banned_user: "عذراً ، لقد تم حظرك من %{app_name}. يمكنك اﻹتصال بفريق الدعم إن كنت تعتقد أن هناك خطأ ما."
   devise:
     mailer:
       reset_password_instructions:
@@ -242,6 +323,8 @@ ar:
   archive_archive_is: "Archive.is"
   archive_archive_org: "Archive.org"
   project_export_email_title_csv: "تقرير مشروعك جاهز للتحميل"
+  workflow_status_not_valid: "حالة غير صحيحة"
+  workflow_status_permission_error: "عذراً ، ليس مسموح لك تغيير هذه الحالة."
   blank_default_status_for_custom_translation_status: "من فضلك أضف قيمة إفتراضية لحالات الترجمة الخاصة"
   blank_active_status_for_custom_translation_status: "من فضلك أضف قيمة نشطة لحالات الترجمة الخاصة"
   blank_default_status_for_custom_verification_status: "من فضلك أضف قيمة إفتراضية لحالات التحقق الخاصة"
@@ -251,7 +334,7 @@ ar:
   bot_team_id_mandatory_to_create: "عذراً ، يجب اختيار فريقاً لكي تضيف البوت"
   bot_not_approved_for_installation: "عذراً ، لا يمكن تثبيت هذا البوت ﻷن لم يتم الموافقة عليه"
   only_admins_can_approve_bots: "عذراً ، هذه العملية متاحة للمسؤولين فقط"
-  could_not_save_related_bot_data: "عذراً ، لم نتمكن من إضافة البوت لهذا الفريق"
+  could_not_save_related_bot_data: "عذراً ، لقد واجهنا خطأ ما اثناء إضافة البوت. من فضلك أعد المحاولة وتواصل مع فريق الدعم إن استمر الخطأ."
   bot_limited_team_not_pro: "عذراً ، البوت غير متاح لهذا الفريق"
   slack_save_task_comment: "أضاف *%{user}* تعليقاً للمهمة *%{task}* في %{url} في %{project}*: %{comment}"
   bot_cant_add_response_to_task: "عذراً ، البوت يمكنه فقط تقديم اقتراحاً لحل المهمة"
@@ -271,6 +354,8 @@ ar:
         description: "الصحفيون يتحققون من المعلومات."
       contributor:
         description: "المشاركون يضيفون عناصر جديدة للتحقق. هم في الغالب أعضاء من الجمهور."
+      annotator:
+        description: "المفسرون يمكنهم فقط عرض وإجابة المهام المكلفون بها."
     permissions:
       sections:
         project_management:
@@ -305,9 +390,24 @@ ar:
             delete: "حذف الفريق"
             edit: "تحرير معلومات الفريق"
             set_private: "إخفاء أو إظهار الفريق"
-            edit_status: "تحرير حالات التحقق المتخصصة"
-            edit_tasks: "تحرير مهام الفريق المتخصصة"
+            edit_status: "تحرير حالات تحقق الفريق"
+            edit_tasks: "تحرير مهام الفريق"
             roles: "إدارة أعضاء الفريق"
             third_party: "تكامل التطبيقات الخارجية"
             invite_owner: "دعوة مديري الفريق والموافقة عليهم وإزالتهم"
             invite_members: "دعوة أعضاء الفريق والموافقة عليهم وإزالتهم"
+  team_import:
+    invalid_google_spreadsheet_url: "عنوان جدول بيانات غير صحيح %{spreadsheet_url}"
+    not_found_google_spreadsheet_url: "عنوان جدول بيانات غير صحيح %{spreadsheet_url}"
+    cannot_authenticate_with_the_credentials: "عذراً ، لقد واجهنا خطأ ما. من فضلك أعد المحاولة وتواصل مع فريق الدعم إن استمر الخطأ."
+    team_not_present: "عذراً ، لقد واجهنا خطأ ما. من فضلك أعد المحاولة وتواصل مع فريق الدعم إن استمر الخطأ."
+    user_not_present: "عذراً ، لقد واجهنا خطأ ما. من فضلك أعد المحاولة وتواصل مع فريق الدعم إن استمر الخطأ."
+    user_not_authorized: "عذراً ، ليس مسموح لك استيراد بيانات لهذا الفريق."
+    invalid_project: "مشروع غير صحيح %{project}"
+    invalid_user: "مؤلف غير صحيح %{user}"
+    invalid_status: "%{status}حالة غير صحيحة "
+    blank_user: "مؤلف فارغ غير صحيح"
+    blank_annotator: "مُعلِّق فارغ غير صحيح"
+    blank_project: "مشروع فارغ غير صحيح"
+    invalid_annotator: "مُعلِّق غير صحيح %{user}"
+    invalid_assignee: "مُكلّف غير صحيح %{user}"
