--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -1,5 +1,19 @@
 es:
   statuses:
+    ids:
+      verification_status: verificación
+      translation_status: traducción
+      task_status: tarea
+    task:
+      unresolved:
+        label: Sin resolver
+        description: Predeterminado, aún no resuelto
+      resolved:
+        label: Resuelto
+        description: La Tarea fue resuelta
+      cant_be_resolved:
+        label: No se puede resolver
+        description: No fue posible resolver la tarea
     media:
       undetermined:
         label: Sin iniciar
@@ -70,6 +84,15 @@ es:
       claim: Afirmación
       uploaded_image: Imagen
       uploaded_file: Archivo
+      task: Tarea
+      comment: Nota
+      project_media: Ítem
+      media: Ítem
+      project: Proyecto
+      team: Equipo
+      user: Usuario
+      source: Fuente
+      project_source: Fuente
     attributes:
       tag:
         data: Etiqueta
@@ -83,6 +106,8 @@ es:
         name: Nombre
       contact:
         phone: Teléfono
+      comment:
+        text: Nota
       user:
         reset_password_token: Restablecer token de la contraseña
         email: Correo electrónico
@@ -104,7 +129,8 @@ es:
           other: es demasiado corta (son mínimo %{count} caracteres)
   slack_webhook_format_wrong: El Slack webhook es inválido, debería tener este formato  `https://hooks.slack.com/services/XXXXX/XXXXXXXXXX`
   slug_is_reserved: Está reservado
-  invalid_media_item: 'Lo sentimos, este no es un elemento multimedia válido '
+  invalid_format_for_languages: "Configuración de idiomas inválida. Debería tener el formato [{'id': 'en', 'title': 'English'}]"
+  invalid_media_item: 'Lo sentimos, este no es un ítem válido '
   invalid_default_status_for_custom_verification_status: El identificador de estado predeterminado es inválido
   invalid_active_status_for_custom_verification_status: El identificador de estado activo es inválido
   invalid_label_for_custom_verification_status: La etiqueta de estado es obligatorio
@@ -113,7 +139,7 @@ es:
   invalid_default_status_for_custom_translation_status: El identificador de estado predeterminado es inválido
   invalid_active_status_for_custom_translation_status: El identificador de estado activo es inválido
   invalid_label_for_custom_translation_status: La etiqueta de estado es obligatorio
-  invalid_id_for_custom_translation_status: El identificador de estado e obligatorio e acepta solo letras, números, guiones y underscores
+  invalid_id_for_custom_translation_status: El identificador de estado es obligatorio y acepta solo letras, números, guiones y guiones bajos
   invalid_statuses_format_for_custom_translation_status: "Los estados de traducción personalizados deben tener entradas válidas para: etiqueta, identificador, descripción, estilo y marca de estado final."
   mail_account_confirmation: "%{app_name} confirmación de cuenta"
   mail_request_to_join: "%{user} quiere unirse al equipo de %{team} en %{app_name}!"
@@ -121,6 +147,47 @@ es:
   rejected: 'no aprobado '
   mail_request_to_join_processed: Tu solicitud para unirte a  %{team} en %{app_name} fue %{status}
   mail_new_account: Nueva cuenta para ti en  %{app_name}
+  slack:
+    fields:
+      assigned: "Asignado a"
+      unassigned: "Desasignado de"
+      required: "Requerido?"
+      required_yes: "Sí"
+      project: "Proyecto"
+      source: "Fuente"
+      status: "Estado"
+      status_previous: "Estado anterior"
+      related_to: "Relacionado con"
+      view_button: "Ver %{type} en %{app}"
+      project_source: "Fuente"
+      project_media: "Ítem"
+      attribution: "Respondida por "
+    messages:
+      task_create: "%{user} (%{role} at %{team}) añadió una Tarea"
+      task_edit: "%{user} (%{role} at %{team}) editó la Tarea"
+      task_assign: "%{user} (%{role} at %{team}) asignado un %{type}"
+      task_unassign: "%{user} (%{role} at %{team}) desasigno un %{type}"
+      task_answer_create: "%{user} (%{role} at %{team}) respondió una Tarea"
+      task_answer_edit: "%{user} (%{role} at %{team}) editó una respuesta de Tarea"
+      task_comment: "%{user} (%{role} at %{team}) agregó una nota a una Tarea"
+      project_media_comment: "%{user} (%{role} at %{team}) añadió una nota a una  %{parent_type}"
+      project_media_create: "%{user} (%{role} at %{team}) añadió un %{type}"
+      project_media_create_related: "%{user} (%{role} at %{team}) añadió un %{type} relacionado"
+      project_media_create_no_user: "Un %{type} ha sido añadido"
+      project_media_create_related_no_user: "Un %{type} relacionado ha sido añadido"
+      project_media_update: "%{user} (%{role} at %{team}) editado un %{type}"
+      project_media_update_no_user: "Un %{type} ha sido editado"
+      project_media_status: "%{user} (%{role} at %{team}) cambiar el %{workflow} del estado a %{type}"
+      project_media_assign: "%{user} (%{role} at %{team}) asignado un %{type}"
+      project_media_unassign: "%{user} (%{role} at %{team}) desasigno un %{type}"
+      project_source_comment: "%{user} (%{role} at %{team}) añadió una nota a una %{parent_type}"
+      project_source_create: "%{user} (%{role} at %{team}) añadido un %{type}"
+      project_source_update: "%{user} (%{role} at %{team}) editado un %{type}"
+      project_create: "%{user} (%{role} at %{team}) creó un proyecto "
+      user_member: "%{user} unido al equipo %{team}"
+      user_requested: "%{user} solicitó unirse al equipo %{team}"
+      user_invited: "%{user} fue invitado a unirse al equipo %{team}"
+      user_banned: "%{user}fue suspendido del equipo %{team}"
   mail_view_welcome: Bienvenido a %{app_name}
   mail_view_register: "¡Estás a un solo paso de usar %{app_name}! Por favor, confirma tu dirección de correo electrónico haciendo clic en el siguiente enlace:"
   mail_view_joined: ¡Tu solicitud para unirte a %{team} fue aprobada! ¡Puedes ir a %{url} y empezar a contribuir!
@@ -155,6 +222,9 @@ es:
           html: "Cuando esté lista, la copia del equipo estará disponible en <strong>%{copy_url}</strong>"
   reset_password_instructions: "%{app_name} instrucciones para restablecer la contraseña"
   email_not_found: 'Correo electrónico no encontrado '
+  slack_channel_format_wrong: "Canal de Slack inválido"
+  translation_status_not_valid: "Estatus inválido"
+  translation_status_permission_error: "Lo sentimos, no tienes autorización para hacer este cambio de estado."
   translation_request_id_exists: "Ya existe una solicitud de traducción para este mensaje "
   auto_publisher_added_to_project: ¡Gracias! ahora todas las traducciones nuevas en el proyecto %{project} se publicarán automáticamente en esta cuenta de %{provider}. Si cambias de opinión, ponte en contacto con el administrador o simplemente revoca la autorización de Bridge de %{provider}.
   invalid_token: Token inválido
@@ -173,6 +243,7 @@ es:
   role_owner: propietario
   role_contributor: contribuidor
   role_journalist: periodista
+  role_annotator: anotador(a)
   role_none: miembro
   oembed_credit: Añadido por %{user} (%{role}) %{date}
   oembed_notes_count:
@@ -181,10 +252,14 @@ es:
   oembed_completed_tasks_count:
     one: "Una tarea completada"
     other: "%{count} tareas completadas"
+  oembed_verification_tasks: Tareas
   oembed_tasks: Tareas
   oembed_translations: Traducciones
   oembed_expand_all: Expandir todo
   oembed_collapse_all: Contraer todo
+  oembed_resolved_tasks_count:
+    one: "Una tarea resuelta "
+    other: "%{count} tareas resueltas"
   oembed_notes: Notas
   pender_conflict: Este enlace ya está siendo analizado, intente de nuevo en unos segundos.
   duplicate_source: Fuente existente
@@ -194,34 +269,36 @@ es:
   error_project_archived: "No se pueden crear medios de comunicación en un equipo eliminado"
   error_team_archived_for_source: "No se puede crear una fuente en un equipo eliminado"
   permission_error: "Lo sentimos, no tienes autorización para realizar esta operación"
-  error_annotated_archived: "No se puede añadir una nota en un equipo eliminado"
+  error_annotated_archived: "No se puede añadir una nota en un ítem eliminado"
   only_super_admin_can_do_this: "Lo sentimos, solo los administradores del sistema pueden hacer este cambio"
   max_number_of_team_users_reached: "Lo sentimos, se ha alcanzado el número máximo de usuarios para este equipo"
   max_number_of_projects_reached: "Lo sentimos, se alcanzó el número máximo de proyectos para este equipo"
   cant_set_custom_statuses: "Lo sentimos, la función de estados personalizados no está disponible para este equipo"
   cant_change_custom_statuses: "No se pueden modificar las definiciones de estado porque algunos estados podrían perderse. Estos identificadores de estado: %{statuses} están en uso por los siguientes artículos:\n %{urls} %{others_amount}"
+  cant_create_team_task: "Lo sentimos, tu equipo no tiene acceso a estas funciones"
   cant_create_media_under_this_team_using_extension: "Lo sentimos, la función de extensión del navegador no está disponible para este equipo"
   error_invalid_attribution: "Atribución inválida"
   account_exists: Esta cuenta ya existe
   media_exists: Este archivo multimedia ya existe
   source_exists: Esta fuente ya existe
+  banned_user: "Lo sentimos, tu cuenta ha sido suspendida de %{app_name}. Por favor comunícate con el soporte técnico del equipo si crees que ha sido un error."
   devise:
     mailer:
       reset_password_instructions:
         instruction: "Alguien ha solicitado un enlace para cambiar tu contraseña, y tu puedes hacerlo a través del siguiente enlace.  <strong>Ten en cuenta que este enlace vence en  %{expire} horas.</strong>"
   error_user_is_not_a_team_member: "Lo sentimos, solo puedes asignar tareas a los miembros de este equipo"
   mail_see_it: "Puedes verlo en:"
-  mail_subject_assign_verification_status: "[%{team} - %{project}] Se te ha asignado un elemento multimedia"
-  mail_subject_unassign_verification_status: "[%{team} - %{project}] Se te ha desasignado un elemento multimedia"
-  mail_subject_assign_translation_status: "[%{team} - %{project}] Se te ha asignado un elemento multimedia"
-  mail_subject_unassign_translation_status: "[%{team} - %{project}] Se te ha desasignado un elemento multimedia"
+  mail_subject_assign_verification_status: "[%{team} - %{project}] Se te ha asignado un ítem"
+  mail_subject_unassign_verification_status: "[%{team} - %{project}] Se te ha desasignado un ítem"
+  mail_subject_assign_translation_status: "[%{team} - %{project}] Se te ha asignado un ítem"
+  mail_subject_unassign_translation_status: "[%{team} - %{project}] Se te ha desasignado un ítem"
   mail_subject_assign_task: "[%{team} - %{project}] Se te ha asignado una tarea"
   mail_subject_unassign_task: "[%{team} - %{project}] Se te ha desasignado una tarea"
-  mail_subject_update_status: "[%{team} - %{project}] Un elemento multimedia fue marcado como %{status}"
+  mail_subject_update_status: "[%{team} - %{project}] El estado del item fue marcado como %{status}"
   mail_assign_verification_status: "%{author} te asignó el medio: "
-  mail_unassign_verification_status: "%{author} te desasignó el medio: "
+  mail_unassign_verification_status: "%{author} te desasignó el ítem: "
   mail_assign_translation_status: "%{author} te asignó el medio: "
-  mail_unassign_translation_status: "%{author} te desasignó el medio: "
+  mail_unassign_translation_status: "%{author} te desasignó el ítem: "
   mail_assign_task: "%{author} te asignó la tarea  \"%{task}\" del medio: "
   mail_unassign_task: "%{author} te desasignó la tarea \"%{task}\" del medio: "
   mail_update_status: "%{author}estableció el estado de \"%{title}\" a %{status}"
@@ -230,6 +307,8 @@ es:
   archive_archive_is: "Archive.is"
   archive_archive_org: "Archive.org"
   project_export_email_title_csv: "Su informe de proyecto está listo para descargar"
+  workflow_status_not_valid: "Estado inválido"
+  workflow_status_permission_error: "Lo sentimos, no tienes autorización para cambiar este estado."
   blank_default_status_for_custom_translation_status: "Por favor proporcione un valor predeterminado para los estados de traducción personalizados"
   blank_active_status_for_custom_translation_status: "Por favor proporcione un valor activo para los estados de traducción personalizados"
   blank_default_status_for_custom_verification_status: "Por favor proporcione un valor predeterminado para los estados de verificación personalizados"
@@ -241,7 +320,7 @@ es:
   only_admins_can_approve_bots: "Lo sentimos, solo super admins pueden aprobar bots"
   could_not_save_related_bot_data: "Lo sentimos, no se pudo agregar el bot a este equipo"
   bot_limited_team_not_pro: "Lo sentimos, este bot no está disponible para este equipo"
-  slack_save_task_comment: "*%{user}* agregó una nota a la tarea *%{task}* en %{url} en *%{project}*: %{comment}"
+  slack_save_task_comment: "*%{user}* añadió una nota a la tarea *%{task}* en %{url} en *%{project}*: %{comment}"
   bot_cant_add_response_to_task: "Lo sentimos, un bot no puede responder una tarea directamente; en su lugar, envía una sugerencia de respuesta porfavor."
   bot_cant_add_review_to_task: "Lo sentimos, un bot no puede evaluar una sugerencia de respuesta"
   task_suggestion_invalid_value: "Lo sentimos, el valor de la sugerencia no es válido"
@@ -259,6 +338,8 @@ es:
         description: "Periodistas Chequearon la información."
       contributor:
         description: "Los Contribuidores pueden añadir nueva información al chequeo. Usualmente son miembros del público."
+      annotator:
+        description: "Anotadore(a)s solo pueden ver y responder a las tareas asignadas a ello(a)s."
     permissions:
       sections:
         project_management:
@@ -267,14 +348,14 @@ es:
             create: "Crear proyecto"
             edit: "Editar proyecto"
             delete: "Eliminar proyecto"
-            add_item: "Añadir elemento multimedia al proyecto "
+            add_item: "Añadir ítem al proyecto "
         item_page_management:
           name: "Gestión del ítem"
           permissions:
             edit: "Editar ítem"
             move: "Mover ítem"
             change_status: "Cambiar el estado del ítem"
-            lock_unlock_status: "Bloquear/desbloquear estados"
+            lock_unlock_status: "Bloquear/desbloquear estado"
             add_remove_tag: "Añadir/eliminar etiquetas"
             send_to_trash: "Envia ítem o fuente a la papelera"
             empty_trash: "Papelera vacía "
@@ -286,7 +367,7 @@ es:
             delete: "Eliminar tarea"
             add_response: "Añadir una respuesta"
             delete_repsonse: "Eliminar respuesta"
-            assign_task: "Asignar tareo o elemento multimedia"
+            assign_task: "Asignar tareo o ítem"
         team_management:
           name: "Gestión del equipo"
           permissions:
@@ -299,3 +380,18 @@ es:
             third_party: "Añadir integraciones de terceros"
             invite_owner: "Invitar, aprobar y eliminar propietarios de equipos"
             invite_members: "Invitar, aprobar y eliminar miembros del equipo"
+  team_import:
+    invalid_google_spreadsheet_url: "URL de hoja de cálculo inválida %{spreadsheet_url}"
+    not_found_google_spreadsheet_url: "Hoja de cálculo no encontrada en %{spreadsheet_url}"
+    cannot_authenticate_with_the_credentials: "No se pudo autenticar Google Drive con las credenciales actuales. Ponte en contacto con el equipo de soporte técnico para notificarles este incidente."
+    team_not_present: "El equipo actual no se encontró durante la importación de datos. Notifica al equipo de soporte técnico de este incidente."
+    user_not_present: "El usuario actual no se encontró durante la importación de datos. Notifica al equipo de soporte técnico de este incidente."
+    user_not_authorized: "Lo sentimos, no tienes permitido importar data dentro de este equipo."
+    invalid_project: "Proyecto inválido %{project}"
+    invalid_user: "Autor inválido %{user}"
+    invalid_status: "Estado inválido %{status}"
+    blank_user: "Autor en blanco Inválido"
+    blank_annotator: "Anotación en blanco Inválida"
+    blank_project: "Proyecto en blanco inválido"
+    invalid_annotator: "Anotación inválida %{user}"
+    invalid_assignee: "Usuario asignado inválido %{user}"
