--- a/config/locales/ar.yml
+++ b/config/locales/ar.yml
@@ -313,6 +313,8 @@ ar:
         accept_until: "هذه الدعوة سوف تنتهي في %{due_date}."
         ignore: "إذا كنت لا تريد قبول الدعوة ، فيمكنك تجاهل هذه الرسالة."
         app_team: "فريق %{app}"
+    failure:
+      unconfirmed: "من فضلك راجع بريدك الالكتروني للتحقق من حسابك."
   user_invitation:
     invited: 'تمت دعوة هذا المستخدم بالفعل لهذا الفريق.'
     member: 'هذا المستخدم عضو في الفريق بالفعل.'
